--- a/script/index.html
+++ b/script/index.html
@@ -93,6 +93,11 @@
                         <div class="row">
                             <div class="col-xs-6 col-md-3">
                                 <div class="alert alert-success" role="alert">
+                                    <a href="../jquery/jquery-cover.html"> 제이쿼리 표지</a>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-success" role="alert">
                                     <a href="../jquery/jquery05_attr.html"> attr()<br>속성 설정하기</a>
                                 </div>
                             </div>
@@ -109,6 +114,11 @@
                             <div class="col-xs-6 col-md-3">
                                 <div class="alert alert-danger" role="alert">
                                     <a href="../jquery/jquery08_append.html"> append()<br>속성 설정하기</a>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-danger" role="alert">
+                                    <a href="../jquery/jquery09_animaition.html"> animation<br>속성 설정하기</a>
                                 </div>
                             </div>
                         </div>
@@ -150,13 +160,12 @@
                 <!-- //Intro3 -->
                 <!-- Intro4 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro4" class="page-header">샘플</h2>
+                    <h2 id="intro4" class="page-header">메뉴 이펙트</h2>
                     <div class="row">
                         <div class="row">
                             <div class="col-xs-6 col-md-3">
                                 <div class="alert alert-success" role="alert">
-                                    <a href="https://codepen.io/yejin1212/pen/oNBLRqq" target="_blank"> 탭 메뉴01 -
-                                        제이쿼리</a>
+                                    <a href="../effect/menuEffect-cover.html" target="_blank"> 탭 메뉴 표지</a>
                                 </div>
                             </div>
 
