--- a/responsive/index.html
+++ b/responsive/index.html
@@ -70,10 +70,11 @@
     <!--//header-->
     <!--nav-->     
                 <div id="contents">
+                    <div class="container">
                     <div id="cont-nav">
-                        <div class="container">
+                        <div class="nav">
                             <h2 class="ir_so">반응형 사이트 전제 메뉴</h2>
-                            <div class="nav">
+                            
                                 <div>
                                     <h3>HTML Peference</h3>
                                     <ol>
@@ -127,7 +128,8 @@
                             </div>
                         </div>
                     </div>
-            </div>           
+                </div>
+                  
     <!--//nav-->
     <!--title-->
     <div id="title">
@@ -201,7 +203,7 @@
                         <h5 class="ir_so">image1</h5>
                         <figure>
                             <img src="assets/img/blog3_@1.jpg" srcset="assets/img/blog3_@1.jpg 1x, assets/img/blog3_@1.jpg 2x, assets/img/blog3_@1.jpg 3x" alt="이미지1">
-                            <figcaption>반응형 웹 사이트 이미지 글입니다.반응형 웹 사이트 이미지 글입니다.반응형 웹 사이트 이미지 글입니다.반응형 웹 사이트 이미지 글입니다.</figcaption>
+                            <figcaption>반응형 웹 사이트 이미지 글입니다.반응형 웹 사이트 이미지 글입니다.</figcaption>
                         </figure>
                     </div>
                     <!--//blog1 -->
@@ -210,7 +212,7 @@
                         <h5 class="ir_so">image2</h5>
                         <figure>
                             <img src="assets/img/blog4_@1.jpg" srcset="assets/img/blog4_@1.jpg 1x, assets/img/blog4_@1.jpg 2x, assets/img/blog4_@1.jpg 3x" alt="이미지1">
-                            <figcaption>반응형 웹 사이트 이미지 글입니다.반응형 웹 사이트 이미지 글입니다.반응형 웹 사이트 이미지 글입니다.반응형 웹 사이트 이미지 글입니다.</figcaption>
+                            <figcaption>반응형 웹 사이트 이미지 글입니다.반응형 웹 사이트 이미지 글입니다.</figcaption>
                         </figure>
                     </div>
                     <!--//blog2 -->
@@ -233,22 +235,30 @@
                     <!-- 라이트 박스 -->
                     <div class="lightbox">
                         <!--div*10>img[src="assets/img/Light$$.jpg" alt="이미지$$"]-->
-                        <div><img src="assets/img/Light01.jpg" alt="이미지01"></div>
-                        <div><img src="assets/img/Light02.jpg" alt="이미지02"></div>
-                        <div><img src="assets/img/Light03.jpg" alt="이미지03"></div>
-                        <div><img src="assets/img/Light04.jpg" alt="이미지04"></div>
-                        <div><img src="assets/img/Light05.jpg" alt="이미지05"></div>
-                        <div><img src="assets/img/Light06.jpg" alt="이미지06"></div>
-                        <div><img src="assets/img/Light07.jpg" alt="이미지07"></div>
-                        <div><img src="assets/img/Light08.jpg" alt="이미지08"></div>
-                        <div><img src="assets/img/Light09.jpg" alt="이미지09"></div>
-                        <div><img src="assets/img/Light10.jpg" alt="이미지10"></div>
+                        <div><img src="assets/img/light01.jpg" alt="이미지01"></div>
+                        <div><img src="assets/img/light02.jpg" alt="이미지02"></div>
+                        <div><img src="assets/img/light03.jpg" alt="이미지03"></div>
+                        <div><img src="assets/img/light04.jpg" alt="이미지04"></div>
+                        <div><img src="assets/img/light05.jpg" alt="이미지05"></div>
+                        <div><img src="assets/img/light06.jpg" alt="이미지06"></div>
+                        <div><img src="assets/img/light07.jpg" alt="이미지07"></div>
+                        <div><img src="assets/img/light08.jpg" alt="이미지08"></div>
+                        <div><img src="assets/img/light09.jpg" alt="이미지09"></div>
+                        <div><img src="assets/img/light10.jpg" alt="이미지10"></div>
                     </div>
                     <!-- //라이트 박스 -->
                 </article>
                 <article class="column col6">
-                    <h4 class="col_tit">타이틀</h4>
-                    <p class="col_desc">이 곳은 설명 부분입니다</p>
+                    <h4 class="col_tit">Video</h4>
+                    <p class="col_desc">반응형 영상을 보여주는 영역입니다</p>
+                    <!-- video -->
+                    <!--<video autoplay="autoplay" controls="controls" loop="loop">
+                        <source src="assets/img/">
+                    </video-->
+                    <div class="video">
+                        <iframe src="https://www.youtube.com/embed/YmMEJHm42hI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <!-- //video -->
                 </article>
             </section>
             <section id="cont_rigth">
@@ -256,14 +266,29 @@
                 <article class="column col7">
                     <h4 class="col_tit">타이틀</h4>
                     <p class="col_desc">이 곳은 설명 부분입니다</p>
+                    <!-- side1 -->
+                    <div class="side1">
+                        <img src="assets/img/side1.jpg" alt="">
+                    </div>
+                    <!-- //side1 -->
                 </article>
                 <article class="column col8">
                     <h4 class="col_tit">타이틀</h4>
                     <p class="col_desc">이 곳은 설명 부분입니다</p>
+                    <!-- side2 -->
+                    <div class="side2">
+                        <img src="assets/img/side2.jpg" alt="">
+                    </div>
+                    <!-- //side2 -->
                 </article>
                 <article class="column col9">
                     <h4 class="col_tit">타이틀</h4>
                     <p class="col_desc">이 곳은 설명 부분입니다</p>
+                    <!-- side3 -->
+                    <div class="side3">
+                        <img src="assets/img/side3.jpg" alt="">
+                    </div>
+                    <!-- //side3 -->
                 </article>
             </section>
             </div>            
@@ -272,7 +297,26 @@
     <!--//main-->
     <!--footer-->
     <footer id="footer">
-        <h2>반응형 사이트 푸터</h2>
+        <div class="container">
+            <div class="row">
+                <div class="footer">
+                    <ul>
+                        <li><a href="#">사이트 도움말</a></li>
+                        <li><a href="#">사이트 이용약관</a></li>
+                        <li><a href="#">사이트 운영원칙</a></li>
+                        <li><a href="#"><strong>개인정보취급방침</strong> </a></li>
+                        <li><a href="#">책임의 한계와 법적고지</a></li>
+                        <li><a href="#">게시중단요청 서비스</a></li>
+                        <li><a href="#">고객센터</a></li>
+                    </ul>
+                    <address>
+                        copyright &copy;
+                        <a href="#">http://kimyj6419.dothome.co.kr/</a>
+                        All Right Reserved
+                    </address>
+                </div>
+            </div>
+        </div>
     </footer>
     <!--//footer-->
 </body>
