--- a/script/cssEffect/border-radius.html
+++ b/script/cssEffect/border-radius.html
@@ -11,6 +11,7 @@
     <title>웹스토리보이 | Webstoryboy | Class</title>
 
     <!-- Bootstrap core CSS -->
+    <link href=".." rel="stylesheet">
     <link href="../assets/css/bootstrap.css" rel="stylesheet">
     <link href="../assets/css/docs.min.css" rel="stylesheet">
     <link href="../assets/css/prism.css" rel="stylesheet">
