--- a/script/index.html
+++ b/script/index.html
@@ -93,32 +93,52 @@
                         <div class="row">
                             <div class="col-xs-6 col-md-3">
                                 <div class="alert alert-success" role="alert">
-                                    <a href="../jquery/jquery-cover.html"> 제이쿼리 표지</a>
+                                    <a href="jqueryRefer/jquery-cover.html"> 제이쿼리 표지</a>
                                 </div>
                             </div>
                             <div class="col-xs-6 col-md-3">
                                 <div class="alert alert-success" role="alert">
-                                    <a href="../jquery/jquery05_attr.html"> attr()<br>속성 설정하기</a>
+                                    <a href="jqueryRefer/jquery_attr.html"> attr()<br>속성 설정하기</a>
                                 </div>
                             </div>
                             <div class="col-xs-6 col-md-3">
                                 <div class="alert alert-info" role="alert">
-                                    <a href="../jquery/jquery06_addclass.html"> addClass()<br>속성 설정하기</a>
+                                    <a href="jqueryRefer/jquery_addclass.html"> addClass()<br>속성 설정하기</a>
                                 </div>
                             </div>
                             <div class="col-xs-6 col-md-3">
                                 <div class="alert alert-warning" role="alert">
-                                    <a href="../jquery/jquery07_css.html"> css()<br>속성 설정하기</a>
+                                    <a href="jqueryRefer/jquery_css.html"> css()<br>속성 설정하기</a>
                                 </div>
                             </div>
                             <div class="col-xs-6 col-md-3">
                                 <div class="alert alert-danger" role="alert">
-                                    <a href="../jquery/jquery08_append.html"> append()<br>속성 설정하기</a>
+                                    <a href="jqueryRefer/jquery_append.html"> append()<br>속성 설정하기</a>
                                 </div>
                             </div>
                             <div class="col-xs-6 col-md-3">
                                 <div class="alert alert-danger" role="alert">
-                                    <a href="../jquery/jquery09_animaition.html"> animation<br>속성 설정하기</a>
+                                    <a href="jqueryRefer/jquery_animaition.html"> animation<br>속성 설정하기</a>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-danger" role="alert">
+                                    <a href="jqueryRefer/jquery_animaition2.html"> animation2<br>속성 설정하기</a>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-danger" role="alert">
+                                    <a href="jqueryRefer/jquery_dimensions.html"> dimensions<br>속성 설정하기</a>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-info" role="alert">
+                                    <a href="jqueryRefer/jquery_offset.html"> offset()<br>속성 설정하기</a>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-info" role="alert">
+                                    <a href="jqueryRefer/jquery_scroll.html"> scroll()<br>속성 설정하기</a>
                                 </div>
                             </div>
                         </div>
@@ -128,12 +148,27 @@
                 <!-- //Intro1 -->
                 <!-- Intro2 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro2" class="page-header">제이쿼리</h2>
+                    <h2 id="intro2" class="page-header">CSS</h2>
                     <div class="row">
                         <div class="row">
                             <div class="col-xs-6 col-md-3">
                                 <div class="alert alert-success" role="alert">
-                                    <a href="../css/border-radius.html"> border-radius()<br>보더값 설정</a>
+                                    <a href="cssEffect/border-radius.html"> border-radius<br>보더 레디우스</a>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-success" role="alert">
+                                    <a href="cssEffect/box-shadow.html"> box-shadow<br>그림자 효과</a>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-success" role="alert">
+                                    <a href="cssEffect/display-flex.html"> display-flex<br>디스플레이 플렉스</a>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-success" role="alert">
+                                    <a href="cssEffect/display-grid.html"> display-grid<br>디스플레이 그리드</a>
                                 </div>
                             </div>
 
@@ -160,12 +195,12 @@
                 <!-- //Intro3 -->
                 <!-- Intro4 -->
                 <div class="bs-docs-section">
-                    <h2 id="intro4" class="page-header">메뉴 이펙트</h2>
+                    <h2 id="intro4" class="page-header">패랠랙스</h2>
                     <div class="row">
                         <div class="row">
                             <div class="col-xs-6 col-md-3">
                                 <div class="alert alert-success" role="alert">
-                                    <a href="../effect/menuEffect-cover.html" target="_blank"> 탭 메뉴 표지</a>
+                                    <a href="parallaxEffect/parallaxEffect01_jquery.html" target="_blank"> 패랠랙스01<br>제이쿼리</a>
                                 </div>
                             </div>
 
@@ -174,6 +209,52 @@
 
                 </div>
                 <!-- //Intro4 -->
+                <!-- Intro5 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro5" class="page-header">메뉴 이펙트</h2>
+                    <div class="row">
+                        <div class="row">
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-success" role="alert">
+                                    <a href="menuEffect/menuEffect-cover.html" target="_blank"> 탭 메뉴 표지</a>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-success" role="alert">
+                                    <a href="menuEffect/menuEffect-jquery.html" target="_blank"> 탭 메뉴<br>제이쿼리</a>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-success" role="alert">
+                                    <a href="menuEffect/menuEffect-javascript.html" target="_blank"> 탭 메뉴<br>자바스크립트</a>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+                <!-- //Intro5 -->
+                <!-- Intro6 -->
+                <div class="bs-docs-section">
+                    <h2 id="intro6" class="page-header">마우스 이펙트</h2>
+                    <div class="row">
+                        <div class="row">
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-success" role="alert">
+                                    <a href="mouseEffect/" target="_blank">마우스 이펙트 표지</a>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-3">
+                                <div class="alert alert-success" role="alert">
+                                    <a href="mouseEffect/mouseEffect01_jquery.html" target="_blank">마우스 이펙트<br>제이쿼리</a>
+                                </div>
+                            </div>                            
+                        </div>
+                    </div>
+
+                </div>
+                <!-- //Intro6 -->
 
             </div>
             <!-- //col-md-12 -->
