--- a/script/jqueryRefer/jquery_addclass.html
+++ b/script/jqueryRefer/jquery_addclass.html
@@ -258,23 +258,23 @@
             min-height: 400px;
         }
         #tab-img.img1{
-            background: url(img/images15.jpg);
+            background: url(../assets/img-jquery/images15.jpg);
             background-size: cover ;
         }
         #tab-img.img2{
-            background: url(img/images16.jpg);
+            background: url(../assets/img-jquery/images16.jpg);
             background-size: cover ;
         }
         #tab-img.img3{
-            background: url(img/images17.jpg);
+            background: url(../assets/img-jquery/images17.jpg);
             background-size: cover ;
         }
         #tab-img.img4{
-            background: url(img/images18.jpg);
+            background: url(../assets/img-jquery/images18.jpg);
             background-size: cover ;
         }
         #tab-img.img5{
-            background: url(img/images14.jpg);
+            background: url(../assets/img-jquery/images14.jpg);
             background-size: cover ;
         }
     </style>
@@ -284,11 +284,11 @@
     <div id="sample1" class="sample">
         <h2>Sample01 : 이미지 선택하기 : addclass() <span class="dot"></span></h2>
         <div class="ex ex1">
-            <div ><img src="img/images05.jpg" alt="샘플이미지1" ></div>
-            <div ><img src="img/images06.jpg" alt="샘플이미지2" ></div>
-            <div ><img src="img/images07.jpg" alt="샘플이미지3" ></div>
-            <div ><img src="img/images08.jpg" alt="샘플이미지4" ></div>
-            <div ><img src="img/images09.jpg" alt="샘플이미지5" ></div>
+            <div ><img src="../assets/img-jquery/images05.jpg" alt="샘플이미지1" ></div>
+            <div ><img src="../assets/img-jquery/images06.jpg" alt="샘플이미지2" ></div>
+            <div ><img src="../assets/img-jquery/images07.jpg" alt="샘플이미지3" ></div>
+            <div ><img src="../assets/img-jquery/images08.jpg" alt="샘플이미지4" ></div>
+            <div ><img src="../assets/img-jquery/images09.jpg" alt="샘플이미지5" ></div>
         </div>
         <div class="re">
             <a href="#c" class="btn1-0">리셋</a>
@@ -299,11 +299,11 @@
     <div id="sample2" class="sample">
         <h2>Sample02 : 이미지 클릭하여 선택하기 : toggleClass<span class="dot"></span></h2>
         <div class="ex ex2">
-            <div ><a href="#c"><img src="img/images05.jpg" alt="샘플이미지1" ></a></div>
-            <div ><a href="#c"><img src="img/images06.jpg" alt="샘플이미지2" ></a></div>
-            <div ><a href="#c"><img src="img/images07.jpg" alt="샘플이미지3" ></a></div>
-            <div ><a href="#c"><img src="img/images08.jpg" alt="샘플이미지4" ></a></div>
-            <div ><a href="#c"><img src="img/images09.jpg" alt="샘플이미지5" ></a></div>
+            <div ><a href="#c"><img src="../assets/img-jquery/images05.jpg" alt="샘플이미지1" ></a></div>
+            <div ><a href="#c"><img src="../assets/img-jquery/images06.jpg" alt="샘플이미지2" ></a></div>
+            <div ><a href="#c"><img src="../assets/img-jquery/images07.jpg" alt="샘플이미지3" ></a></div>
+            <div ><a href="#c"><img src="../assets/img-jquery/images08.jpg" alt="샘플이미지4" ></a></div>
+            <div ><a href="#c"><img src="../assets/img-jquery/images09.jpg" alt="샘플이미지5" ></a></div>
         </div>
         <div class="re">
             <a href="#c" class="btn2-0">리셋</a>
@@ -314,11 +314,11 @@
     <div id="sample3" class="sample">
         <h2>Sample03 : 클래스 검색하기 : hasClass()<span class="dot"></span></h2>
         <div class="ex ex3">
-            <div ><a href="#c"><img src="img/images05.jpg" alt="샘플이미지1" ></a></div>
-            <div ><a href="#c"><img src="img/images06.jpg" alt="샘플이미지2" ></a></div>
-            <div class="selected"><a href="#c"><img src="img/images07.jpg" alt="샘플이미지3" ></a></div>
-            <div ><a href="#c"><img src="img/images08.jpg" alt="샘플이미지4" ></a></div>
-            <div class="selected"><a href="#c"><img src="img/images09.jpg" alt="샘플이미지5" ></a></div>
+            <div ><a href="#c"><img src="../assets/img-jquery/images05.jpg" alt="샘플이미지1" ></a></div>
+            <div ><a href="#c"><img src="../assets/img-jquery/images06.jpg" alt="샘플이미지2" ></a></div>
+            <div class="selected"><a href="#c"><img src="../assets/img-jquery/images07.jpg" alt="샘플이미지3" ></a></div>
+            <div ><a href="#c"><img src="../assets/img-jquery/images08.jpg" alt="샘플이미지4" ></a></div>
+            <div class="selected"><a href="#c"><img src="../assets/img-jquery/images09.jpg" alt="샘플이미지5" ></a></div>
         </div>
         <div class="re">
             <a href="#c" class="btn3-0">리셋</a>
