--- a/script/jqueryRefer/jquery_animaition.html
+++ b/script/jqueryRefer/jquery_animaition.html
@@ -170,10 +170,10 @@
         <h2>Sample01 : 요소 추가하기 <span class="dot"></span></h2>
         <div class="ex ex1">
             <ul>
-                <li><img src="img/images13.jpg" alt="이미지13"></li>
-                <li><img src="img/images14.jpg" alt="이미지14"></li>
-                <li><img src="img/images15.jpg" alt="이미지15"></li>
-                <li><img src="img/images16.jpg" alt="이미지16"></li>
+                <li><img src="../assets/img-jquery/images13.jpg" alt="이미지13"></li>
+                <li><img src="../assets/img-jquery/images14.jpg" alt="이미지14"></li>
+                <li><img src="../assets/img-jquery/images15.jpg" alt="이미지15"></li>
+                <li><img src="../assets/img-jquery/images16.jpg" alt="이미지16"></li>
             </ul>
         </div>
         <div class="re">
@@ -187,10 +187,10 @@
         <h2>Sample02 : 요소 추가하기 <span class="dot"></span></h2>
         <div class="ex ex2">
             <ul>
-                <li><img src="img/images10.jpg" alt="이미지10"></li>
-                <li><img src="img/images11.jpg" alt="이미지11"></li>
-                <li><img src="img/images12.jpg" alt="이미지12"></li>
-                <li><img src="img/images13.jpg" alt="이미지13"></li>
+                <li><img src="../assets/img-jquery/images10.jpg" alt="이미지10"></li>
+                <li><img src="../assets/img-jquery/images11.jpg" alt="이미지11"></li>
+                <li><img src="../assets/img-jquery/images12.jpg" alt="이미지12"></li>
+                <li><img src="../assets/img-jquery/images13.jpg" alt="이미지13"></li>
             </ul>
         </div>
         <div class="re">
@@ -204,10 +204,10 @@
         <h2>Sample03 : 요소 추가하기 <span class="dot"></span></h2>
         <div class="ex ex3">
             <ul>
-                <li><img src="img/images01.jpg" alt="이미지01"></li>
-                <li><img src="img/images02.jpg" alt="이미지02"></li>
-                <li><img src="img/images03.jpg" alt="이미지03"></li>
-                <li><img src="img/images04.jpg" alt="이미지04"></li>
+                <li><img src="../assets/img-jquery/images01.jpg" alt="이미지01"></li>
+                <li><img src="../assets/img-jquery/images02.jpg" alt="이미지02"></li>
+                <li><img src="../assets/img-jquery/images03.jpg" alt="이미지03"></li>
+                <li><img src="../assets/img-jquery/images04.jpg" alt="이미지04"></li>
             </ul>
         </div>
         <div class="re">
