--- a/script/jqueryRefer/jquery_append.html
+++ b/script/jqueryRefer/jquery_append.html
@@ -177,10 +177,10 @@
         <h2>Sample01 : 요소 추가하기 <span class="dot"></span></h2>
         <div class="ex ex1">
             <ul>
-                <li><img src="img/images13.jpg" alt="이미지13"></li>
-                <li><img src="img/images14.jpg" alt="이미지14"></li>
-                <li><img src="img/images15.jpg" alt="이미지15"></li>
-                <li><img src="img/images16.jpg" alt="이미지16"></li>
+                <li><img src="../assets/img-jquery/images13.jpg" alt="이미지13"></li>
+                <li><img src="../assets/img-jquery/images14.jpg" alt="이미지14"></li>
+                <li><img src="../assets/img-jquery/images15.jpg" alt="이미지15"></li>
+                <li><img src="../assets/img-jquery/images16.jpg" alt="이미지16"></li>
             </ul>
         </div>
         <div class="re">
@@ -195,7 +195,7 @@
         <h2>Sample02 : 이미지 랜덤으로 추가하기 <span class="dot"></span></h2>
         <div class="ex ex2">
             <ul>
-                <li><img src="img/images13.jpg" alt="이미지13"></li>
+                <li><img src="../assets/img-jquery/images13.jpg" alt="이미지13"></li>
             </ul>
         </div>
         <div class="re">
@@ -208,9 +208,9 @@
         <h2>Sample03 : 2초에 한번씩 이미지 이동하기 <span class="dot"></span></h2>
         <div class="ex ex3">
             <ul>
-                <li><img src="img/images01.jpg" alt="이미지1"></li>
-                <li><img src="img/images02.jpg" alt="이미지2"></li>
-                <li><img src="img/images03.jpg" alt="이미지3"></li>
+                <li><img src="../assets/img-jquery/images01.jpg" alt="이미지1"></li>
+                <li><img src="../assets/img-jquery/images02.jpg" alt="이미지2"></li>
+                <li><img src="../assets/img-jquery/images03.jpg" alt="이미지3"></li>
             </ul>
         </div>
         <div class="re">
