--- a/script/jqueryRefer/jquery_css.html
+++ b/script/jqueryRefer/jquery_css.html
@@ -210,11 +210,11 @@
         <h2>Sample01 : css 속성 알아내기 <span class="dot"></span></h2>
         <div class="ex ex1">
             <figure>
-                <img src="img/images11.jpg" alt="샘플이미지" class="img1">
+                <img src="../assets/img-jquery/images11.jpg" alt="샘플이미지" class="img1">
                 <figcaption>이 이미지는 바다에서 촬영했습니다</figcaption>
             </figure>
             <figure>
-                <img src="img/images12.jpg" alt="샘플이미지" class="img1">
+                <img src="../assets/img-jquery/images12.jpg" alt="샘플이미지" class="img1">
                 <figcaption>이 이미지는 바다에서 촬영했습니다</figcaption>
             </figure>
             <p class="text text1">여기에 표시됩니다.</p>
@@ -229,11 +229,11 @@
         <h2>Sample02 : css 속성 변경하기 <span class="dot"></span></h2>
         <div class="ex ex2">
             <figure>
-                <img src="img/images13.jpg" alt="샘플이미지" class="img2">
+                <img src="../assets/img-jquery/images13.jpg" alt="샘플이미지" class="img2">
                 <figcaption>이 이미지는 바다에서 촬영했습니다</figcaption>
             </figure>
             <figure>
-                <img src="img/images14.jpg" alt="샘플이미지" class="img2">
+                <img src="../assets/img-jquery/images14.jpg" alt="샘플이미지" class="img2">
                 <figcaption>이 이미지는 바다에서 촬영했습니다</figcaption>
             </figure>
             <p class="text text2">여기에 표시됩니다.</p>
@@ -250,15 +250,15 @@
         <h2>Sample03 : 글씨 크기 +/- <span class="dot"></span></h2>
         <div class="ex ex3">
             <figure>
-                <img src="img/images15.jpg" alt="샘플이미지" class="img3">
+                <img src="../assets/img-jquery/images15.jpg" alt="샘플이미지" class="img3">
                 <figcaption>이 이미지는 바다에서 촬영했습니다</figcaption>
             </figure>
             <figure>
-                <img src="img/images16.jpg" alt="샘플이미지" class="img3">
+                <img src="../assets/img-jquery/images16.jpg" alt="샘플이미지" class="img3">
                 <figcaption>이 이미지는 바다에서 촬영했습니다</figcaption>
             </figure>
             <figure>
-                <img src="img/images17.jpg" alt="샘플이미지" class="img3">
+                <img src="../assets/img-jquery/images17.jpg" alt="샘플이미지" class="img3">
                 <figcaption>이 이미지는 바다에서 촬영했습니다</figcaption>
             </figure>
             <p class="text text3">여기에 표시됩니다.</p>
