--- a/responsive/index.html
+++ b/responsive/index.html
@@ -145,7 +145,7 @@
     <!--//title-->
     <!--main-->
     <main>
-        <section id="contents">
+        <section id="content">
             <div class="container">
                 <h2 class="ir_so">반응형 사이트 컨텐츠</h2>
             <section id="cont_left">
@@ -256,7 +256,11 @@
                         <source src="assets/img/">
                     </video-->
                     <div class="video">
-                        <iframe src="https://www.youtube.com/embed/YmMEJHm42hI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/YmMEJHm42hI" 
+                        title="YouTube video player" frameborder="0" 
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                        gyroscope; picture-in-picture" allowfullscreen>
+                        </iframe>
                     </div>
                     <!-- //video -->
                 </article>
